--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.47.0"
+    "sass": "^1.47.0",
+    "swiper": "^8.0.6"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
